Tue Jun  4 10:02:44 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (responses): Add Created and Update-existing responses.
	* server.c (server_updated): If they are supported, use them
	instead of Updated.
	* client.c (struct update_entries_data): Add existp field.
	(handle_checked_in, handle_updated, handle_new_entry,
	handle_merged, handle_patched): Set it.
	(handle_update_existing, handle_created): New functions,
	for new responses.
	(update_entries): Based on existp, check for
	existence/nonexistence of file.
	(try_read_from_server): Expand comment.
	* server.c, server.h (server_updated): New argument vers.
	* checkin.c (Checkin), commit.c (commit_fileproc), update.c
	(update_fileproc, merge_file, join_file): Pass it.
	* cvs.h: Move include of server.h after Vers_TS declaration.
	* sanity.sh (conflicts2): New tests conflicts2-142d* test for
	above fix.

	* sanity.sh (ignore): Fix typo in comment.

	* tag.c (tag_check_valid): Add comment clarifying when val-tags
	entries are created.

Mon Jun  3 07:26:35 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Increment version number to 1.8.4.

Mon Jun  3 02:20:30 1996  Noel Cragg  <noel@gargle.rain.org>

	* version.c: version 1.8.3.

Thu May 30 10:07:24 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (cmds): Fix typo ("bdif" -> "dif") which was accidentally
	introduced 24 May 96.

	* main.c (main_cleanup): Add comment stating default case will
	never be reached.

Wed May 29 21:43:43 1996  noel  <noel@BOAT_ANCHOR>

	* main.c (main_cleanup): check to see if SIGHUP, SIGINT, SIGQUIT,
 	SIGPIPE, and SIGTERM are defined before using them.  Also add a
 	default case to print out those errors numerically which are not
 	found.

Wed May 29 18:43:45 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* expand_path.c (expand_path): Document LINE == 0 and allocation
	of return value.
	* modules.c (do_module): Pass 0, not -1, to indicate line number